# raytracing

./: .gitignore  CMakeLists.txt  ReadMe.txt  camera.cpp  camera.h  color.cpp  color.h  gtest.cpp  igeometry.h  ilightsource.h  imagebuffer.h  imagereader.cpp  imagereader.h  imagewriter.cpp  imagewriter.h  imaterial.h  interfacehelper.cpp  intersection.h  lodepng.cpp  main.cpp  pointlight.cpp  pointlight.h  progresslog.h  ray.h  raytracing.sln  raytracing.vcxproj  raytracing.vcxproj.filters  scene.cpp  scene.h  sphere.cpp  sphere.h  supersampler.cpp  supersampler.h  utils.h  vecmath.h  vector.h
material/: imaterial.h  lambertshader.h
shader/: blinnshader.cpp  blinnshader.h  checkermaterial.h  filematerial.cpp  filematerial.h  glassshader.cpp  glassshader.h  imaterial.h  ishader.h  lambertshader.cpp  lambertshader.h  mirrorshader.cpp  mirrorshader.h  phongshader.cpp  phongshader.h  staticcolormaterial.h
shape/: igeometry.h  ishape.h  plane.cpp  plane.h  sphere.cpp  sphere.h
